# CreateCraft-Launcher

./: .gitignore  LICENCE  README.md  forge.config.js  index.html  launcher-mods-api-key.example  package-lock.json  package.json  vite.config.js  vite.main.config.mjs  vite.renderer.config.mjs
.cursor/rules/: always-build.mdc
.github/workflows/: release-build.yml  windows-installer.yml
branding/: launcher-mods-key.enc
packaging/arch/: PKGBUILD.in
scripts/: New-CodeSigningCertificate.ps1  clean-build.ps1  embed-mods-api-key.cjs  generate-arch-package.sh  make-signed.ps1  prepare-branding.cjs  prepare-branding.ps1  rebuild-all.ps1  rename-artifacts.cjs  rename-installer.ps1  tauri-build.cjs
src/: App.jsx  createCraftsModsSync.js  gamePackConstants.json  index.css  javaManager.js  launcherApi.js  launcherModsApiClient.js  launcherModsApiKey.js  launcherModsKeyEmbed.js  launcherModsManifestSignature.js  main.js  preload.js  profileStore.js  renderer.jsx  serversDat.js  tauriCompat.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  game.rs  mod.rs  mods.rs  platform.rs  shell.rs  update.rs
src-tauri/src/crypto/: key_embed.rs  manifest_sig.rs  mod.rs
src-tauri/src/minecraft/: assets.rs  java.rs  launcher.rs  mod.rs  neoforge.rs
src-tauri/src/session/: store.rs
src/components/forge/: CogwheelFrame.jsx  GearDecoration.jsx  LauncherMainPanel.jsx  SteampunkFooter.jsx  (+1 more)
test/: launcherModsManifestSignature.test.cjs
