[package]
name = "createcrafts-launcher"
version = "1.0.1"
description = "CreateCrafts Launcher — Tauri 2, Minecraft 1.21.1, NeoForge"
authors = ["Bl4ck3d"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "createcrafts_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

tokio       = { version = "1", features = ["full"] }

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
] }
futures-util = "0.3"

# Crypto
sha1    = "0.10"
sha2    = "0.10"
aes-gcm = { version = "0.10", features = ["std"] }
rand = "0.8"
scrypt  = "0.11"
md-5    = "0.10"
hex     = "0.4"
base64  = "0.22"

zip     = { version = "2", default-features = false, features = ["deflate"] }

# Utilities
chrono    = { version = "0.4", features = ["serde"] }
uuid         = { version = "1",   features = ["v4"] }
urlencoding  = "2"
anyhow       = "1"
thiserror = "1"
num_cpus  = "1"
os_info   = "3"
dirs      = "5"
regex     = "1"
semver    = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level   = 3
lto         = "thin"
codegen-units = 1
strip       = "symbols"
panic       = "abort"
